--- a/moviestyle.css
+++ b/moviestyle.css
@@ -47,6 +47,17 @@
     font-weight: 400;
     font-style: normal;
 }
+.resetbtn {
+    width: 110px;
+    height: 45px;
+    font-size: 20pt;
+    margin-left: 5pt;
+    background-color: aliceblue;
+    border-color: aliceblue;
+    font-family: "Jua", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
 
 .mainbody {
     margin-top: 10px;
